fix: fix clickable area stretch - use justify-self start
- Set justify-self: start for .order-link and .detail-value-clickable
- Prevents background from stretching to full container width
- Clickable area now matches text length only

--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -74,6 +74,8 @@ th.sortable:hover {
   text-decoration: underline;
   text-decoration-style: dotted;
   text-underline-offset: 3px;
+  justify-self: start;
+  display: inline-block;
 }
 
 .detail-content .order-link:hover {
@@ -304,6 +306,7 @@ th.sortable.desc .sort-indicator::before {
   text-decoration: underline;
   text-decoration-style: dotted;
   text-underline-offset: 3px;
+  justify-self: start;
 }
 
 .detail-value-clickable:hover {
